[package]
name = "examsafety"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.1", features = ["cookies", "json"] }
tokio = "0.2.0-alpha.6"
serde_json = "1.0.41"
